--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,11 @@ override.tf.json
 # Include override files you do wish to add to version control using negated pattern
 #
 # !example_override.tf
-
+.tronador
+tronador/
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+.idea/
+
+provider.temp.tf
+.terraform.lock.hcl
