docs: Update README and examples for AWS Transit Gateway module usage
Improved documentation with detailed instructions, examples, and configuration updates. Added usage guides, quick start steps, and variables descriptions for better clarity. Updated module versioning and replaced outdated content.

--- a/README.yaml
+++ b/README.yaml
@@ -25,17 +25,123 @@ description: |-
   This module is designed to be easy to use and highly customizable, making it suitable for a wide range of use cases.
 
 # Introduction to the project
-#introduction: |-
-#  This is an introduction.
+introduction: |-
+  The AWS Transit Gateway Module is designed to simplify the implementation of hub-and-spoke network architectures in AWS. 
+  It provides a centralized way to manage network connectivity between VPCs and on-premises networks through a single gateway.
+
+  Key features:
+  - Automated Transit Gateway deployment with customizable configurations
+  - Support for VPC attachments and route table management
+  - Built-in Resource Access Manager (RAM) integration for cross-account sharing
+  - Comprehensive tagging system integration
+  - DNS support and multicast capabilities
+  - VPN ECMP support for enhanced routing
 
 # How to use this project
-#usage: |-
+usage: |-
+  To use this module, you need to provide the following configuration:
+
+  ```hcl
+  module "transit_gateway" {
+    source = "cloudopsworks/terraform-module-aws-transit-gateway"
+
+    org = {
+      organization_name = "MyOrg"
+      organization_unit = "MyUnit"
+      environment_name = "prod"
+      environment_type = "production"
+    }
+
+    name        = "main-tgw"
+    description = "Main Transit Gateway"
+
+    # Optional configurations
+    amazon_side_asn = "64512"
+    enable_dns_support = true
+    enable_vpn_ecmp_support = true
+
+    # RAM sharing configuration
+    share_tgw = true
+    ram_principals = ["111111111111"]
+  }
+  ```
+
+  For detailed variable descriptions, refer to the variables-transit-gw.tf file.
 
 # Example usage
-#examples: |-
+examples: |-
+  Terragrunt configuration example:
+
+  ```hcl
+  # terragrunt.hcl
+  include {
+    path = find_in_parent_folders()
+  }
+
+  terraform {
+    source = "git::https://github.com/cloudopsworks/terraform-module-aws-transit-gateway.git?ref=v1.0.0"
+  }
+
+  inputs = {
+    org = {
+      organization_name = "MyOrg"
+      organization_unit = "MyUnit"
+      environment_name = get_env("ENV_NAME", "dev")
+      environment_type = get_env("ENV_TYPE", "development")
+    }
+
+    name = "central-tgw"
+    description = "Central Transit Gateway for network connectivity"
+
+    enable_dns_support = true
+    enable_vpn_ecmp_support = true
+
+    transit_gateway_cidr_blocks = ["10.0.0.0/24"]
+
+    share_tgw = true
+    ram_principals = ["222222222222"]
+
+    extra_tags = {
+      Project = "NetworkInfra"
+    }
+  }
+  ```
 
 # How to get started quickly
-#quickstart: |-
+quickstart: |-
+  1. Add the module to your Terraform configuration:
+     ```hcl
+     module "transit_gateway" {
+       source = "cloudopsworks/terraform-module-aws-transit-gateway"
+       version = "1.0.0"
+
+       org = {
+         organization_name = "MyOrg"
+         organization_unit = "MyUnit"
+         environment_name = "dev"
+         environment_type = "development"
+       }
+
+       name = "quick-start-tgw"
+     }
+     ```
+
+  2. Initialize Terraform:
+     ```bash
+     terraform init
+     ```
+
+  3. Review the plan:
+     ```bash
+     terraform plan
+     ```
+
+  4. Apply the configuration:
+     ```bash
+     terraform apply
+     ```
+
+  5. The Transit Gateway will be created with default settings. Customize the configuration by adding more variables as needed.
 
 include:
   - "docs/targets.md"
